@@ -29,7 +29,7 @@
  	</xsl:variable>
 	<xsl:call-template name="watabella_finestra_ordinamento_filtro" />
 	
-	<form action='{uri}' id='{nome}_bottoniera' class='watabella'><xsl:text>&#10;</xsl:text>
+	<form action='{uri}' id='{nome}_bottoniera' class='watabella' onsubmit='return document.{nome}.ricercaRapida()'><xsl:text>&#10;</xsl:text>
 		<div>
 			<xsl:apply-templates select="watabella_azioni_pagina"/>
 			<xsl:apply-templates select="watabella_ricerca_rapida"/>
@@ -108,45 +108,6 @@
 		</button>
 		<xsl:text>&#10;</xsl:text>
 		
-</xsl:template>
-
-<!-- ********************************************************************** -->
-<!-- template barra di navigazione -->
-<!-- ********************************************************************** -->
-<xsl:template match="watabella_barra_navigazione">
-
-	<xsl:variable name="qoe">
-		<xsl:choose>
-			<xsl:when test="contains(/watabella/uri, '?')">&amp;</xsl:when>
-			<xsl:otherwise>?</xsl:otherwise>
-		</xsl:choose>	
- 	</xsl:variable>
-
- 	<table style='width: 100%' class='watabella'>
-		<tr>
-			<td style='width: 20%; text-align: left'>
-				<xsl:if test="nr_pagina_corrente &gt; 0">
-					<xsl:variable name="pag_prec" select="concat(/watabella/uri, $qoe, 'watbl_pg[', /watabella/nome, ']=', nr_pagina_corrente -1)" />
-					<button type='button' name='paginaprecedente' id='paginaprecedente' title='Pagina precedente' value='&lt;&lt; Pagina precedente' onclick='document.{/watabella/nome}.cambiaPagina("{$pag_prec}")'>
-						&lt;&lt; Pagina precedente
-					</button><xsl:text>&#10;</xsl:text>
-				</xsl:if>
-			</td>
-			<td style='width: 60%; text-align: center'>
-				pagina <xsl:value-of select="nr_pagina_corrente + 1"/> di <xsl:value-of select="totale_pagine"/>
-				-
-				registrazioni dalla <xsl:value-of select="primo_record"/> alla <xsl:value-of select="ultimo_record"/> di <xsl:value-of select="totale_record"/>
-			</td>
-			<td style='width: 20%; text-align: right'>
-				<xsl:if test="nr_pagina_corrente &lt; totale_pagine - 1">
-					<xsl:variable name="pag_succ" select="concat(/watabella/uri, $qoe, 'watbl_pg[', /watabella/nome, ']=', nr_pagina_corrente + 1)" />
-					<button type='button' name='paginasuccessiva' id='paginasuccessiva' title='Pagina successiva' value='Pagina successiva &gt;&gt;' onclick='document.{/watabella/nome}.cambiaPagina("{$pag_succ}")'>
-						Pagina successiva &gt;&gt;
-					</button><xsl:text>&#10;</xsl:text>
-				</xsl:if>
-			</td>
-		</tr>
-	</table>
 </xsl:template>
 
 <!-- ********************************************************************** -->
